Added semantic HTML structure

--- a/index.html
+++ b/index.html
@@ -15,25 +15,65 @@
   </style>
 </head>
 <body>
-
-  Features
-  Company
-  Careers
-  About
-
-  Login
-  Register
-
-  Make remote work
-
-  Get your team in sync, no matter your location. Streamline processes, 
+  <header id="header">
+    <!-- Navigation Container -->
+    <nav id="navigation">
+      <!-- Logo and navigation container -->
+      <section id="logoNav">
+        <!-- Logo -->
+        <img src="images/logo.svg" alt="Snap's Logo" id="logo"/>
+        <!-- Navigations -->
+        <section id="nav">
+          <p>Features</p>
+          <P>Company</P>
+          <p>Careers</p>
+          <p>About</p>
+        </section>
+      </section>
+      <!-- CTA's container -->
+      <section id="cta">
+        <button id="login">Login</button>
+        <button id="reg">Register</button>
+      </section>
+    </nav>
+  </header>
+  <!-- Main Body -->
+  <section id="main">
+    <!-- Hero Section -->
+    <section id="Hero">
+      <img src="images/image-hero-desktop.png" alt="Hero Image" id="main">
+    </section>
+    <!-- Desription -->
+    <section id="body">
+      <!-- Texts and CTA -->
+      <section id="textCTA">
+        <h1>
+          Make remote work
+        </h1>
+        <p>
+          Get your team in sync, no matter your location. Streamline processes, 
   create team rituals, and watch productivity soar.
+        </p>
+        <button>
+          Learn more
+        </button>
+      </section>
+      <!-- Partners -->
+      <section id="partners">
+        <img src="images/client-databiz.svg" alt="DataBiz logo" class="partner">
+        <img src="images/client-audiophile.svg" alt="AudioPhile logo" class="partner">
+        <img src="images/client-meet.svg" alt="Meet logo" class="partner">
+        <img src="images/client-maker.svg" alt="Maker logo" class="partner">
+      </section>
+    </section>
+  </section>
 
-  Learn more
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <footer id="footer">
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Your Name Here</a>.
+    </div>
+  </footer>
 </body>
+
 </html>
